# Genesis

./: anthropic-to-wot-mcp-prompt.md  the-missing-substrate.md  wot-rbsr-sync.md  wot-v0.10-changelog.md  wot-v0.10-core.md  wot-v0.10-implementation.md  wot-v0.10-integrations.md  wot-v0.11-core.md  wot-v0.12-proposal.md  wot-v0.9-core.md  wot-v0.9-integrations.md
Wellspring/: .gitignore  CLAUDE.md  README.md  chat_converted.md  wellspringeternalchat1.html  wellspringeternalchat1.md  wellspringeternalipfs.html  wellspringeternalipfs.md
Wellspring/Assets/: Colours.rtf
Wellspring/external refs/: product_ai_layout.py
Wellspring/files/: because-indexer-spec-v0.1.md  dogfood-001-notes.md  inference-constraints-section.md  trace_logger.py  traces.jsonl  wellspring-dogfood-001.jsonl  wellspring-dogfood-002.jsonl  wellspring-dogfood-003.jsonl  wellspring-dogfood-004-public.jsonl  wellspring-dogfood-005-revocation.jsonl  wellspring-dogfood-006-vouch.jsonl  wellspring-dogfood-007-rotation.jsonl  wellspring-dogfood-008-hello.jsonl  wellspring-dogfood-009-appetite.jsonl  wellspring-dogfood-010-peering.jsonl  wellspring-dogfood-011-trust-network.jsonl  wellspring-dogfood-016-sync.json  (+48 more)
Wellspring/files/thread-3/: README.md  chat.py  core.py  daemon-identity.json  daemon.py  identity.json  ingest_traces.py  inject.py  peer_service.py  pool.py  pyproject.toml  requirements.txt  seed_pool.py  test_agent.py  test_peering.py  traces.jsonl  wellspring_agent.py  wot_peer.proto
Wellspring/wot-sites/form-worker/: Cargo.toml  wrangler.toml
Wellspring/wot-sites/form-worker/src/: lib.rs
(+43 files in other folders)
